2013-08-07  Karl Berry  <karl@tug.org>

	* line.c (read_line): only at EOF if loc==0, i.e., do not ignore a
	non-terminated last "line" of a file; distressingly common on Windows.
	* Makefile.am (TESTS): add cnfnewline.test;
	move all *.test to tests/ subdir.
	(EXTRA_DIST): add tests/cnfnewline/texmf.cnf, a file without a
	final newline.

	* kpsewhich.test: also check that we can read the environment
	variable that we set.

2013-07-07  TANAKA Takuji <KXD02663@nifty.ne.jp>

	* knj.c and progname.c: Generalize the method to avoid the 0x5c problem
	in path names to the cases CP936 (simplified Chinese) and CP950
	(traditional Chinese) on Windows system.

2013-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/rebuild.am.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, man/Makefile.am:
	Moved Makefile fragments to ../../am/.

2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-memstr.h: Drop mapping of BSD => SYSV/ANSI string functions.

2013-06-25  Karl Berry  <karl@tug.org>

	* texmf.cnf (guess_input_kanji_encoding): config variable,
	off by default.  Per Akira.

2013-06-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* config.h: Remove definition of EXEEXT, comes from c-auto.h.

2013-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* config.h: define EXEEXT if DOSISH is defined.

	* win32lib.c: Unify two win32lib.c's in w32 sources.

	* progname.c, texmf.cnf: Define SELFAUTOGRANDPARENT to give a
	robust TEXMFLOCAL.

2013-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: New conditional have_EXEEXT.
	* Makefile.am (libkpathsea_la_CPPFLAGS): Define EXEEXT for
	systems with a non-vanishing executable extension.
	* progname.[ch]: New function kpse_program_basename().
	* version.ac: Update version number 6.1.1 => 6.2.0dev.

	Adapt kpathsea headers to C++.
	* absolute.h, cnf.h, concatn.h, config.h, debug.h, expand.h,
	hash.h, knj.h, lib.h, line.h, magstep.h, mingw32.h,